new additions made

--- a/contact.html
+++ b/contact.html
@@ -47,15 +47,15 @@
         <div class="home__contact">
           <div class="home__contact-div">
             <i class="fas fa-envelope"></i> Email
-            <p>jsmith@gmail.com</p>
+            <p>bayramkamaz@icloud.com</p>
           </div>
           <div class="home__contact-div">
             <i class="fas fa-mobile-alt"></i> Phone
-            <p>+1 (571) 360 1234</p>
+            <p>+41 78 211 4566</p>
           </div>
           <div class="home__contact-div">
             <i class="fas fa-map-marker-alt"></i> Address
-            <p>58 First St. Mc Lean VA</p>
+            <p>Aspermontstrasse 17, 7000 Chur</p>
           </div>
         </div>
       </main>
@@ -63,20 +63,20 @@
       <!-- HOME FOOTER -->
       <footer id="contact-footer">
         <div class="social-icons-contact">
+          <a href="https://www.linkedin.com/in/bayramkamaz/" target="_blank">
+            <i class="fab fa-linkedin fa-2x"></i>
+          </a>
+          <a href="https://github.com/bayramsch" target="_blank">
+            <i class="fab fa-github fa-2x"></i>
+          </a>
           <a href="#">
             <i class="fab fa-twitter fa-2x"></i>
           </a>
           <a href="#">
-            <i class="fab fa-facebook fa-2x"></i>
-          </a>
-          <a href="#">
             <i class="fab fa-instagram fa-2x"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-github fa-2x"></i>
-          </a>
         </div>
-        <div class="copy">&copy; Copyright 2021</div>
+        <div class="copy">&copy; Copyright 2023</div>
       </footer>
     </div>
   </body>
