--- a/index.html
+++ b/index.html
@@ -44,28 +44,28 @@
       <main class="home">
         <h2>Hi! My Name Is</h2>
         <h1 class="home__name">
-          John <span class="home__name--last">Smith</span>
+          Bayram <span class="home__name--last">Kamaz</span>
         </h1>
-        <h2>Full Stack Web Developer</h2>
+        <h2>Software Engineer</h2>
       </main>
 
       <!-- HOME FOOTER -->
       <footer class="horizontal">
         <div class="social-icons">
+          <a href="https://www.linkedin.com/in/bayramkamaz/" target="_blank">
+            <i class="fab fa-linkedin fa-2x"></i>
+          </a>
+          <a href="https://github.com/bayramsch" target="_blank">
+            <i class="fab fa-github fa-2x"></i>
+          </a>
           <a href="#">
             <i class="fab fa-twitter fa-2x"></i>
           </a>
           <a href="#">
-            <i class="fab fa-facebook fa-2x"></i>
-          </a>
-          <a href="#">
             <i class="fab fa-instagram fa-2x"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-github fa-2x"></i>
-          </a>
         </div>
-        <div class="copyright">&copy; Copyright 2021</div>
+        <div class="copyright">&copy; Copyright 2023</div>
       </footer>
     </div>
   </body>
