--- a/myProject.html
+++ b/myProject.html
@@ -33,29 +33,41 @@
     </div>
   </div>
   <div class="bottom-Projects">
-    <div class="projects project1"></div>
-    <div class="projects project2"></div>
-    <div class="projects project3"></div>
-    <div class="projects project4"></div>
-    <div class="projects project5"></div>
-    <div class="projects project6"></div>
+    <div class="projects project1">
+      <p class="prj_name">Movie App</p>
+    </div>
+    <div class="projects project2">
+      <p class="prj_name">Digital Clock </p>
+    </div>
+    <div class="projects project3">
+      <p class="prj_name">Calculator Os</p>
+    </div>
+    <div class="projects project4">
+      <p class="prj_name">Blog App</p>
+    </div>
+    <div class="projects project5">
+      <p class="prj_name">Quiz App</p>
+    </div>
+    <div class="projects project6">
+      <p class="prj_name">Language Cards</p>
+    </div>
   </div>
   <footer class="vertical">
     <div class="social-icons">
+      <a href="https://www.linkedin.com/in/bayramkamaz/" target="_blank">
+        <i class="fab fa-linkedin fa-2x"></i>
+      </a>
+      <a href="https://github.com/bayramsch" target="_blank">
+        <i class="fab fa-github fa-2x"></i>
+      </a>
       <a href="#">
         <i class="fab fa-twitter fa-2x"></i>
       </a>
       <a href="#">
-        <i class="fab fa-facebook fa-2x"></i>
-      </a>
-      <a href="#">
         <i class="fab fa-instagram fa-2x"></i>
       </a>
-      <a href="#">
-        <i class="fab fa-github fa-2x"></i>
-      </a>
     </div>
-    <div class="copyright">&copy; Copyright 2021
+    <div class="copyright">&copy; Copyright 2023
       
     </div>
   </footer>
